# Photo_editor

./: CMakeLists.txt
